css/index.css
html{
    scroll-behavior: smooth;
}

body{
    padding: 0px;
    margin: 0px;
    background: #ffffff;
    font-family: 'Poppins', sans-serif;
}

.main{
    height: 100vh;
    width: 100%;
    background: url('../images/Background.svg') center center no-repeat fixed;
    background-size: auto 100%;
    position: absolute;
    top: 0px;
    left: 0px;
}

.main-content-holder{
    height: auto;
    width: 100%;
    position: relative;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%,-50%);
    -moz-transform: translate(-50%,-50%);
    -ms-transform: translate(-50%,-50%);
    -o-transform: translate(-50%,-50%);
    transform: translate(-50%,-50%);
}

.main-content-holder h1{
    font-size: 4em;
    text-align: center;
    color: #141414;
    font-weight: 700;
    margin-top: 0px;
    margin-bottom:0px;
}

.dsc-logo{
    height: 10%;
    width: 30%;
    background: url('../images/FullTextLogo.svg') center center no-repeat;
    background-size:100% auto;
    margin: auto auto;
}

.know-more-button{
    background: #4D95FB;
    color: #ffffff;
    font-size: 24px;
    font-weight: 300;
    width: 150px;
    text-align: center;
    padding: 10px;
    border-radius: 6px;
    margin:auto auto;
    margin-top: 20px;
    cursor: pointer;
    border: 1px solid #4D95FB;
    transition: all .3s ease;
}

.know-more-button:hover{
    background: #ffffff;
    color: #4D95FB;
}

.enroll-button{
    background: #4D95FB;
    color: #ffffff;
    font-size: 24px;
    font-weight: 300;
    width: 150px;
    text-align: center;
    padding: 10px;
    border-radius: 6px;
    margin:auto auto;
    margin-top: 20px;
    cursor: pointer;
    border: 1px solid #4D95FB;
    transition: all .3s ease;
}

.enroll-button:hover{
    background: #ffffff;
    color: #4D95FB;
}

.main-about{
    width: 100%;
    height: auto;
    padding-top: 10vh;
    padding-bottom: 10vh;
    position: absolute;
    top: 100vh;
}

.main-about h1{
    text-align:center;
    font-size: 2em;
}

.main-about p{
    padding-top: 40px;
    padding-bottom: 60px;
    text-align: center;
    width: 90%;
    max-width: 1200px;
    font-size: 1.1em;
    letter-spacing: 0.07em;
    line-height: 2rem;
    margin:auto auto;
}

.main-about-icon{
    text-align: center;
}

.icon-holder{
    height: auto;
    width: auto;
    display: inline-block;
    margin-left: 25px;
    margin-right: 25px;
    margin-bottom: 25px;
    cursor: pointer;
}

.icon-holder-two{
    height: auto;
    width: auto;
    display: inline-block;
    margin-left: 25px;
    margin-right: 25px;
    margin-bottom: 25px;
}

.icon{
    height: 150px;
    width: 150px;
    border-radius: 50%;
    transform: scale(1);
    transition: .3s ease;
}

.icon:hover{
    transform: scale(1.1);
}

.icon-text{
    font-size: 1em;
    color: #141414;
    text-align: center;
    letter-spacing: 0.07em;
    margin-top: 15px;
}

.icon-holder-three{
    height: auto;
    width: auto;
    margin-left: 25px;
    margin-right: 25px;
    margin-bottom: 35px;
}

.icon-two{
    height: 100px;
    width: 100px;
    border-radius: 50%;
    transform: scale(1);
    transition: .3s ease;
    margin:auto auto;
    margin-bottom: 25px;
}

.icon-two:hover{
    transform: scale(1.1);
}

.icon-text{
    font-size: 1em;
    color: #141414;
    text-align: center;
    letter-spacing: 0.07em;
    margin-top: 15px;
}

.hoodie{
    background: url('../images/Hoodie.svg') center center;
    background-size: cover;
}

.pen{
    background: url('../images/Pen.svg') center center;
    background-size: cover;
}

.certificate{
    background: url('../images/Certification.svg') center center;
    background-size: cover;
}

.data{
    background: url('../images/Data.svg') center center;
    background-size: cover;
}

.android{
    background: url('../images/Android.svg') center center;
    background-size: cover;
}

.ml{
    background: url('../images/ML.svg') center center;
    background-size: cover;
}

.step-one{
    background: url('../images/StepOne.svg') center center;
    background-size: cover;
}

.step-two{
    background: url('../images/StepTwo.svg') center center;
    background-size: cover;
}

.step-three{
    background: url('../images/StepThree.svg') center center;
    background-size: cover;
}

.modal{
    height: auto;
    width: 80%;
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
    z-index: 99;
    background:url('../images/Background.svg') center center;
    background-size: cover;
    border-radius: 6px;
    overflow: scroll;
    max-width: 1000px;
    max-height: 800px;
    padding-left: 5%;
    padding-right: 5%;
    padding-top: 5vh;
    padding-bottom: 5vh;

}

.modal-top-bar{
    height: 15%;
    width: 100%;
    text-align: right;
}

.modal-main a:focus{
    color: #4D95FB;
    text-decoration:none;
    font-weight:400;
}

.modal-main a{
    color: #4D95FB;
    text-decoration:none;
    font-weight:700;
    margin-left: 15px;
}

.modal-main p{
    letter-spacing: 0.07em;
}

.modal-main .enroll-button{
    margin: 0px;
}

.tint{
    height: 100vh;
    width: 100%;
    background: #141414;
    opacity: 0.8;
    position: fixed;
    top: 0px;
    left: 0px;
    z-index: 98;
}

#close-modal{
    color: #141414;
    font-weight: 700;
    text-decoration: underline;
    cursor: pointer;
    font-size: 1.5em;
}

.modal{
    display: none;
}

.tint{
    display: none;
}

.modal-main-app{
    display: none;
}

.modal-main-ml{
    display: none;
}

.modal-main-data{
    display: none;
}


/* Media Queries */

@media only screen and (max-width:920px){
    .main{
        background: url('../images/BackgroundPhone.svg') center center no-repeat fixed;
        background-size: cover;
    }

    .main-content-holder h1{
        font-size: 2em;
    }

}

@media only screen and (max-width:740px){
    .dsc-logo{
        width: 70%;
    }

    .main-about h1{
        font-size: 1.5em;
        width: 90%;
        margin:auto auto;
    }

    .main-about p{
        font-size: 0.8em;
        line-height: 1.5rem;
    }

    .modal-main p{
        font-size: 0.65em;
    }

    .modal-main h3{
        font-size: 0.9em;
    }

    .modal-main h1{
        font-size: 1.2em;
    }

    #close-modal{
        font-size: 1em;
    }

    .enroll-button{
        background: #4D95FB;
        color: #ffffff;
        font-size: 18px;
        font-weight: 300;
        width: 120px;
        text-align: center;
        padding: 10px;
        border-radius: 6px;
        margin:auto auto;
        margin-top: 20px;
        cursor: pointer;
        border: 1px solid #4D95FB;
    }

